# abs-opds

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  performance_report.md  tsconfig.json
.github/workflows/: build.yaml  release.yaml
abs_opds/: Cargo.toml
abs_opds/src/: api.rs  auth.rs  handlers.rs  i18n.rs  main.rs  models.rs  service.rs  service_tests.rs  tests.rs  xml.rs
benches/: opds_benchmark.rs
src/: api.rs  auth.rs  handlers.rs  i18n.rs  index.ts  lib.rs  main.rs  models.rs  opds2.rs  performance_tests.rs  service.rs  service_tests.rs  tests.rs  utils.rs  xml.rs
src/helpers/: abs.ts  api.ts
