[package]
name = "abs_opds"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
quick-xml = { version = "0.31", features = ["serialize"] }
dotenvy = "0.15"
base64 = "0.21"
sha1_smol = "1.0"
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
regex = "1"
thiserror = "1"
unicode-normalization = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# Force same http version
http = "1"
anyhow = "1.0.100"
envy = "0.4.2"
async-trait = "0.1.89"

[dev-dependencies]
mockall = "0.13.1"
